--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,7 +9,7 @@ pipeline {
         stage('Checkout') {
             steps {
                 // Checkout the code from GitHub
-                git url: 'https://github.com/Hakandemir94/ExBanking.git', branch: 'main'
+                git url: 'https://github.com/Hakandemir94/ExBanking.git', branch: 'master'
             }
         }
         
