--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         {
           "publicPath": "./reports",
           "filename": "report.html",
-          "expand": true
+          "expand": true,
+          "inlineSource": true
         }
       ]
     ]
