--- a/JenkinsFile
+++ b/JenkinsFile
@@ -22,7 +22,7 @@ pipeline {
         
         stage('Stop MongoDB') {
             steps {
-                // Stop MongoDB
+                // Stop MongoDB if it's running
                 bat 'net stop MongoDB'
             }
         }
@@ -33,6 +33,15 @@ pipeline {
                 bat 'net start MongoDB'
             }
         }
+        
+        stage('Start Mock API') {
+            steps {
+                // Start the mock API server
+                bat 'start /B node src/mockApi.js'
+                // Give the server some time to start
+                sleep time: 5, unit: 'SECONDS'
+            }
+        }
 
         stage('Run Tests') {
             steps {
@@ -41,13 +50,7 @@ pipeline {
             }
             post {
                 always {
-                    archiveArtifacts artifacts: 'reports/**', allowEmptyArchive: true
-                    publishHTML(target: [
-                        reportName: 'Test Report',
-                        reportDir: 'reports',
-                        reportFiles: 'report.html',
-                        keepAll: true
-                    ])
+                    junit 'reports/junit.xml' // Publish test results
                 }
             }
         }
@@ -57,6 +60,18 @@ pipeline {
                 // Run load tests
                 bat 'artillery run load-test.yml'
             }
+        }
+    }
+
+    post {
+        always {
+            archiveArtifacts artifacts: 'reports/**', allowEmptyArchive: true
+            publishHTML(target: [
+                reportName: 'Test Report',
+                reportDir: 'reports',
+                reportFiles: 'report.html',
+                keepAll: true
+            ])
         }
     }
 }
