--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/mockApi.js",
   "scripts": {
     "start": "node src/mockApi.js",
-    "test": "jest --reporters=default --reporters=jest-html-reporters"
+    "test": "jest --reporters=default --reporters=jest-html-reporters --reporters=jest-junit"
   },
   "jest": {
     "testEnvironment": "node",
@@ -19,6 +19,13 @@
           "filename": "report.html",
           "expand": true,
           "inlineSource": true
+        }
+      ],
+      [
+        "jest-junit",
+        {
+          "outputDirectory": "reports",
+          "outputName": "junit.xml"
         }
       ]
     ]
@@ -35,6 +42,7 @@
     "@babel/preset-react": "^7.24.6",
     "assert": "^2.0.0",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-junit": "^12.0.0"
   }
 }
