Fix junit.xml location

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       [
         "jest-junit",
         {
-          "outputDirectory": "reports",
+          "outputDirectory": ".",
    	  "reportTestSuiteErrors": "true",
           "outputName": "junit.xml"
         }
