--- a/JenkinsFile
+++ b/JenkinsFile
@@ -56,7 +56,7 @@ pipeline {
                     bat 'dir reports'
                     // Ensure the correct path for JUnit results
                     bat 'IF EXIST reports\\junit.xml (echo JUnit report found) ELSE (echo JUnit report not found)'
-                    junit 'reports/junit.xml' // Publish test results
+                    junit './junit.xml' // Publish test results
                 }
             }
         }
@@ -71,10 +71,10 @@ pipeline {
 
     post {
         always {
-            archiveArtifacts artifacts: 'reports/**', allowEmptyArchive: true
+            archiveArtifacts artifacts: './**', allowEmptyArchive: true
             publishHTML(target: [
                 reportName: 'Test Report',
-                reportDir: 'reports',
+                reportDir: '.',
                 reportFiles: 'report.html',
                 keepAll: true
             ])
