--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
           "publicPath": "./reports",
           "filename": "report.html",
           "expand": true,
-          "inlineSource": true
+          "inlineSource": true,
+          "urlForTestFiles": "PLACEHOLDER_URL"
         }
       ],
       [
